# fiuba-ceia-iisaia

./: .gitignore
tp-bad-ui/: README.md  index.html  prompts.md
tp-final/: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  STYLEGUIDE.md
tp-final/backend/: README.md  pyproject.toml
tp-final/backend/app/: db.py  main.py
tp-final/backend/app/api/: forecasts.py  wells.py
tp-final/backend/app/models/: __init__.py
tp-final/backend/app/schemas/: __init__.py
tp-final/backend/app/services/: arps.py  csv_loader.py  forecast.py  wells.py
tp-final/backend/scripts/: export_openapi.py
tp-final/backend/tests/: conftest.py  test_api_forecasts.py  test_api_wells.py  test_arps.py  test_csv_loader.py  test_openapi_sync.py
tp-final/docs/: csv-format.md  decisions.md  openapi.yaml  presentation-ai.html  presentation.html  sample-data.csv
tp-final/frontend/: index.html  package-lock.json  package.json
tp-final/frontend/src/: App.tsx  index.css  main.tsx
tp-final/frontend/src/api/: client.ts  debugger.ts  hooks.ts  types.ts
tp-final/frontend/src/components/: ApiDebugger.tsx  ProductionChart.tsx  WaveLogo.tsx
tp-final/frontend/src/pages/: UploadPage.tsx  WelcomePage.tsx  WellDetailPage.tsx  WellsPage.tsx
tp-final/tasks/: lessons.md  todo.md
tp-openapi/: README.md  openapi.yaml  prompts.md
