[project]
name = "oil-forecaster-backend"
version = "0.1.0"
description = "Oil production forecasting API using Arps decline curves"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24.0",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI relies on calling Depends()/File()/Form() in argument defaults.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
